# nonebot_plugin_qwqa

./: README.md  pyproject.toml
nonebot_plugin_qwqa/: __init__.py
nonebot_plugin_qwqa/nonebot_plugin_qwqa/: __init__.py
nonebot_plugin_qwqa/plugins/nonebot_plugin_qwqa/: __init__.py
qwqa/plugins/qwqa/: __init__.py
